Massive site overhaul for new design
-revamped index (still needs to add in intro video for hero section)
- revamped 88rising project to fit light theme (still needs to add responsiveness)
- reworked css to fit with new theme (needs to add responsiveness and removed unused classes/IDs

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <p>Currently @AnimeTrending+</p>
                 <p>Previously @Fraser Health and @SFU Summer Festival</p>
                 <p>Based in Vancouver, BC</p>
+                <p id="arrow-down">↓</p>
             </div>
             <!-- right -->
             <div class="right-banner" id="hero-video">
@@ -59,7 +60,7 @@
 
             <!-- First Row -->               
             <div class="scroll-reveal container down active">
-                <div class="grid featured-project" id="rising-card">
+                <div class="grid featured-project">
                     <!-- left side -->
                     <div class="project-details project-item">
                         <a href="88rising.html">
@@ -87,7 +88,7 @@
                     </div>
                     <!-- right side -->
                     <div class="project-details project-item">
-                        <a href="88rising.html">
+                        <a href="fureverhome.html">
                             <img alt="FurEverHome Banner image" class="lazy js-off" src="img\fureverhome\FureverhomeBanner_100.jpg"
                             data-src="img\fureverhome\FureverhomeBanner_400.jpg"
                             data-srcset="img\fureverhome\FureverhomeBanner_400.jpg 400w,
@@ -115,10 +116,10 @@
 
             <!-- Second Row -->     
             <div class="scroll-reveal container down active">
-                <div class="grid featured-project" id="rising-card">
+                <div class="grid featured-project">
                     <!-- left side -->
                     <div class="project-details project-item">
-                        <a href="88rising.html">
+                        <a href="summerfest.html">
                             <div class="project-img">
                                 <figure>
                                     <video class="lazy js-off" width="1920" height="1080" data-src="img/summerfest/poster_reveal.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail">
@@ -146,11 +147,11 @@
                             <p class="project-type right-align-text">MOTION/GRAPHIC DESIGN. SOCIAL MEDIA</p>
                         </div>
                         <p class="project-description">A multimedia voluntary project for The SFU Summer Festival annual convention.</p> 
-                        <a href="88rising.html" class="label-button">View Project →</a>
+                        <a href="summerfest.html" class="label-button">View Project →</a>
                     </div>
                     <!-- right side -->
                     <div class="project-details project-item">
-                        <a href="88rising.html">
+                        <a href="Splitwise.html">
                             <div class="project-img static-img project-item ">
                                 <figure>
                                     <img alt="Splitiwse Banner image" class="lazy js-off" src="img/Splitwise/Splitwise_banner_100.png"
@@ -175,17 +176,17 @@
                             <p class="project-type right-align-text">UX. UI. PROTOTYPING</p>
                         </div>
                         <p class="project-description">A Senior UI/UX feature design project for the expense splitting mobile application Splitwise.</p> 
-                        <a href="fureverhome.html" class="label-button">View Project →</a>
+                        <a href="Splitwise.html" class="label-button">View Project →</a>
                     </div>
                 </div>
             </div>
 
             <!-- Third Row -->
             <div class="scroll-reveal container down active">
-                <div class="grid featured-project" id="rising-card">
+                <div class="grid featured-project">
                     <!-- left side -->
                     <div class="project-details project-item">
-                        <a href="88rising.html">
+                        <a href="icebreaker.html">
                             <div class="project-img">
                                 <figure>
                                     <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"></video>
@@ -210,11 +211,11 @@
                             <p class="project-type right-align-text">MOTION DESIGN. CHARACTER ANIMATION</p>
                         </div>
                         <p class="project-description">Creating a motion Ggaphic for the SFU Anime Club's seasonal Club's Day event on social media.</p> 
-                        <a href="88rising.html" class="label-button">View Project →</a>
+                        <a href="icebreaker.html" class="label-button">View Project →</a>
                     </div>
                     <!-- right side -->
                     <div class="project-details project-item">
-                        <a href="88rising.html">
+                        <a href="Splitwise.html">
                             <div class="project-img static-img project-item ">
                                 <figure>
                                     <img alt="Splitiwse Banner image" class="lazy js-off" src="img/Splitwise/Splitwise_banner_100.png"
@@ -236,22 +237,24 @@
                         </a>
                         <div class=" grid two-col-project-grid">
                             <h3>Side/Passion Projects</h3>
-                            <p class="project-type right-align-text">MOTION DESIGN. GRAPHIC DESIGN</p>
+                            <p class="project-type right-align-text">MOTION DESIGN. GRAPHIC DESIGN. PHOTOGRAPHY</p>
                         </div>
                         <p class="project-description">Various side projects I have created throughout the years in my (little) spare time.</p> 
-                        <a href="fureverhome.html" class="label-button">View Project →</a>
+                        <a href="#" class="label-button">Coming soon 👀!!</a>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> 
     </main>
   
-    <footer id="contacts">
-
-        <div class=" grid two-col-project-grid">
-            <h4>Designed and coded by me :D with the help of city pop, cameras and anime.</h4>
-            <div>
-                <p class="right-align-text">EXPERIENCE DESIGN. UX. UI</p>
+    <footer>
+        <div class="separating-line"></div>
+        <div class=" grid nav-grid-master">
+            <h4 class="footer-msg">Designed and coded by me :D with the help of city pop, cameras and anime.</h4>
+            <div class="nav-grid-text grid nav-button add-gutters">
+                <a href="mailto:lukedo2111@gmail.com" class="footer-link">Email</a>
+                <a href="https://www.linkedin.com/in/luke-do-284073216/" class="footer-link" target="_blank">LinkedIn</a>
+                <a href="https://www.instagram.com/lukex1a/" class="footer-link" target="_blank">Instagram</a>
             </div>
         </div>
     </footer>        
