Revamped project case study
- Revamped case study to light theme
- minor changes to 88rising for grammar issues

--- a/index.html
+++ b/index.html
@@ -29,9 +29,19 @@
             </div>
 
         </nav>
+        <!-- <section class="grid main-banner">
+            <div class="left-banner" id="hero-text">
+                <h4>Hi there,</h4>
+                <h1 class="reveal-text">Luke is a product designer who brings static images to life, enhancing people's daily experiences, <a href="about.html" class="in-text-link" id="banner-text"> by day.</a></h1>
+                <p>Currently @AnimeTrending+</p>
+                <p>Previously @Fraser Health and @SFU Summer Festival</p>
+                <p>Based in Vancouver, BC</p>
+                <p id="arrow-down">↓</p>
+            </div>
+        </section> -->
         <section class="grid main-banner main-banner-2c add-gutters">
             <!-- left -->
-            <div class="left-banner">
+            <div class="left-banner" id="hero-text">
                 <h4>Hi there,</h4>
                 <h1 class="reveal-text">Luke is a product designer who brings static images to life, enhancing people's daily experiences, <a href="about.html" class="in-text-link" id="banner-text"> by day.</a></h1>
                 <p>Currently @AnimeTrending+</p>
@@ -40,11 +50,23 @@
                 <p id="arrow-down">↓</p>
             </div>
             <!-- right -->
-            <div class="right-banner" id="hero-video">
+            <div class="about-img">
                 <!-- place holder for video showcase -->
                 <figure>
-                    <video class="lazy js-off" width="1920" height="1080" data-src="img\otherProjects\KAFU.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail">
-                    </video>
+                    <img alt="Luke Do's Bio Photo" class="lazy js-off" src="img\aboutMe\cameraPhoto_100.png"
+                    data-src="img\aboutMe\cameraPhoto_400.png"
+                    data-srcset="img\aboutMe\cameraPhoto_400.png 400w,
+                                 img\aboutMe\cameraPhoto_800.png 800w,
+                                 img\aboutMe\cameraPhoto_ 1080.png 1080w"
+                    data-sizes="100w" width="1024">
+                    <noscript>
+                        <img src="img\aboutMe\cameraPhoto_100.png" alt="Luke Do's Bio Photo"
+                            srcset="img\aboutMe\cameraPhoto_400.png 400w,
+                                    img\aboutMe\cameraPhoto_800.png 800w,
+                                    img\aboutMe\cameraPhoto_ 1080.png 1080w"
+                            sizes="(min-width: 74rem) 50vw, 100vw" width="1080" height="1080">
+                    </noscript>
+                    <!-- <video class="lazy js-off" width="840" height="835" data-src="img\otherProjects\KAFU.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"> </video> -->
                 </figure> 
             </div>
         </section> 
@@ -89,17 +111,17 @@
                     <!-- right side -->
                     <div class="project-details project-item">
                         <a href="fureverhome.html">
-                            <img alt="FurEverHome Banner image" class="lazy js-off" src="img\fureverhome\FureverhomeBanner_100.jpg"
-                            data-src="img\fureverhome\FureverhomeBanner_400.jpg"
-                            data-srcset="img\fureverhome\FureverhomeBanner_400.jpg 400w,
-                                         img\fureverhome\FureverhomeBanner_800.jpg 800w,
-                                         img\fureverhome\FureverhomeBanner_1080.jpg 1080w"
+                            <img alt="FurEverHome Thumbnail image" class="lazy js-off" src="img\fureverhome\FureverhomeThumbnail_100.jpg"
+                            data-src="img\fureverhome\FureverhomeThumbnail_400.jpg"
+                            data-srcset="img\fureverhome\FureverhomeThumbnail_400.jpg 400w,
+                                         img\fureverhome\FureverhomeThumbnail_800.jpg 800w,
+                                         img\fureverhome\FureverhomeThumbnail_1080.jpg 1080w"
                             data-sizes="100w">
                             <noscript>
-                                <img src="img\fureverhome\FureverhomeBanner_400.jpg" alt="FurEverHome Banner image"
-                                srcset="img\fureverhome\FureverhomeBanner_400.jpg 400w,
-                                        img\fureverhome\FureverhomeBanner_800.jpg 800w,
-                                        img\fureverhome\FureverhomeBanner_1080.jpg 1080w" 
+                                <img src="img\fureverhome\FureverhomeThumbnail_400.jpg" alt="FurEverHome Thumbnail image"
+                                srcset="img\fureverhome\FureverhomeThumbnail_400.jpg 400w,
+                                        img\fureverhome\FureverhomeThumbnail_800.jpg 800w,
+                                        img\fureverhome\FureverhomeThumbnail_1080.jpg 1080w" 
                                 sizes="(min-width: 74rem) 50vw, 100vw"
                                 >
                             </noscript>
@@ -142,7 +164,7 @@
                                 </figure> 
                             </div>
                         </a>
-                        <div class=" grid two-col-project-grid">
+                        <div class="grid two-col-project-grid">
                             <h3>The SFU Summer Festival</h3>
                             <p class="project-type right-align-text">MOTION/GRAPHIC DESIGN. SOCIAL MEDIA</p>
                         </div>
@@ -154,17 +176,17 @@
                         <a href="Splitwise.html">
                             <div class="project-img static-img project-item ">
                                 <figure>
-                                    <img alt="Splitiwse Banner image" class="lazy js-off" src="img/Splitwise/Splitwise_banner_100.png"
-                                    data-src="img/Splitwise/Splitwise_banner_400.png"
-                                    data-srcset="img/Splitwise/Splitwise_banner_400.png 400w,
-                                                 img/Splitwise/Splitwise_banner_800.png 800w,
-                                                 img/Splitwise/Splitwise_banner_1080.png 1080w"
+                                    <img alt="Splitiwse Thumbnail image" class="lazy js-off" src="img\Splitwise\SplitwiseThumbnail_100.jpg"
+                                    data-src="img\Splitwise\SplitwiseThumbnail_400.jpg"
+                                    data-srcset="img\Splitwise\SplitwiseThumbnail_400.jpg 400w,
+                                                 img\Splitwise\SplitwiseThumbnail_800.jpg 800w,
+                                                 img\Splitwise\SplitwiseThumbnail_1080.jpg 1080w"
                                     data-sizes="100w">
                                     <noscript>
-                                        <img src="img/Splitwise/Splitwise_banner_400.png" alt="Splitiwse Banner image"
-                                        srcset="img/Splitwise/Splitwise_banner_400.png 400w,
-                                                img/Splitwise/Splitwise_banner_800.png 800w,
-                                                img/Splitwise/Splitwise_banner_1080.png 1080w" 
+                                        <img src="img/Splitwise/Splitwise_banner_400.png" alt="Splitiwse Thumbnail image"
+                                        srcset="img\Splitwise\SplitwiseThumbnail_400.jpg 400w,
+                                                img\Splitwise\SplitwiseThumbnail_800.jpg 800w,
+                                                img\Splitwise\SplitwiseThumbnail_1080.jpg 1080w" 
                                         sizes="(min-width: 74rem) 50vw, 100vw"
                                         >
                                     </noscript>
@@ -210,7 +232,7 @@
                             <h3>SFU Anime Icebreaker</h3>
                             <p class="project-type right-align-text">MOTION DESIGN. CHARACTER ANIMATION</p>
                         </div>
-                        <p class="project-description">Creating a motion Ggaphic for the SFU Anime Club's seasonal Club's Day event on social media.</p> 
+                        <p class="project-description">Creating a Motion Graphic for the SFU Anime Club's seasonal Club's Day event on social media.</p> 
                         <a href="icebreaker.html" class="label-button">View Project →</a>
                     </div>
                     <!-- right side -->
