--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    
     <title>About Me | Luke Do</title>
 
     <link href="css/main_work.css" rel="stylesheet">
@@ -16,12 +16,11 @@
 </head>
 
 <body>
-    <header>
-        <nav class="grid nav-grid-master">
+    <header class="about-page">
+        <nav class="grid nav-grid-master about-page">
             <a href="index.html" class="nav-item logo-text">
                 Luke Do
             </a>
-
             <div class="nav-grid-text grid nav-button add-gutters">
                 <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                 <a href="about.html" class="nav-item">About</a>
@@ -29,26 +28,57 @@
             </div>
 
         </nav>
+        <section class="grid main-banner main-banner-2c add-gutters">
+            <!-- left -->
+            <div class="left-banner about-page" id="hero-text">
+                <h4 class="about-page">Hello there,</h4>
+                <h1 class="about-page reveal-text">Luke is (not) a gamer, photography nerd, cat/anime enjoyer and music enthusiast, <a href="about.html" class="in-text-link about-page" id="banner-text"> by night.</a></h1>
+                <p class="about-page">Currently playing Xenoblade Chronicles 3, Yakuza series and Honkai Star Rail</p>
+                <p class="about-page">Listening to Citypop, J-pop and other random genres</p>
+                <p class="about-page">Procrastinating on editing his own photos :D</p>
+                <p class="about-page" id="arrow-down">↓</p>
+            </div>
+            <!-- right -->
+            <div class="about-img">
+
+                <figure>
+                    <img alt="Luke Do's Bio Photo" class="lazy js-off" src="img\aboutMe\cameraPhoto_100.png"
+                    data-src="img\aboutMe\cameraPhoto_400.png"
+                    data-srcset="img\aboutMe\cameraPhoto_400.png 400w,
+                                 img\aboutMe\cameraPhoto_800.png 800w,
+                                 img\aboutMe\cameraPhoto_ 1080.png 1080w"
+                    data-sizes="100w" width="1024">
+                    <noscript>
+                        <img src="img\aboutMe\cameraPhoto_100.png" alt="Luke Do's Bio Photo"
+                            srcset="img\aboutMe\cameraPhoto_400.png 400w,
+                                    img\aboutMe\cameraPhoto_800.png 800w,
+                                    img\aboutMe\cameraPhoto_ 1080.png 1080w"
+                            sizes="(min-width: 74rem) 50vw, 100vw" width="1080" height="1080">
+                    </noscript>
+                </figure> 
+            </div>
+        </section> 
     </header>
 
-
     <main>
+        <div class="separating-line"></div>
+
         <div class="grid about-me-2c">
             <figure class="about-img">
-                <img alt="Luke Do's Bio Photo" class="lazy js-off" src="img/aboutMe/Bio_100.jpg"
-                data-src="img/aboutMe/Bio_400.jpg"
-                data-srcset="img/aboutMe/Bio_400.jpg 400w,
-                             img/aboutMe/Bio_800.jpg 800w,
-                             img/aboutMe/Bio_1080.jpg 1080w"
+                <img alt="Luke Do's Bio Photo" class="lazy js-off" src="img\aboutMe\cameraPhoto_100.png"
+                data-src="img\aboutMe\cameraPhoto_400.png"
+                data-srcset="img\aboutMe\cameraPhoto_400.png 400w,
+                             img\aboutMe\cameraPhoto_800.png 800w,
+                             img\aboutMe\cameraPhoto_ 1080.png 1080w"
                 data-sizes="100w" width="1024">
                 <noscript>
-                    <img src="img/aboutMe/Bio_400.jpg" alt="Luke Do's Bio Photo"
-                        srcset="img/aboutMe/Bio_400.jpg 400w,
-                                img/aboutMe/Bio_800.jpg 800w,
-                                img/aboutMe/Bio_1080.jpg 1080w"
+                    <img src="img\aboutMe\cameraPhoto_100.png" alt="Luke Do's Bio Photo"
+                        srcset="img\aboutMe\cameraPhoto_400.png 400w,
+                                img\aboutMe\cameraPhoto_800.png 800w,
+                                img\aboutMe\cameraPhoto_ 1080.png 1080w"
                         sizes="(min-width: 74rem) 50vw, 100vw" width="1080" height="1080">
                 </noscript>
-            </figure>
+            </figure> 
             <div class="about-bio">
                 <h1>About me</h1>
 
@@ -61,11 +91,17 @@
         </div>
     </main>
 
-    <footer id="contacts">
-        <p class="footer-head">Thank you for checking out my works!</p>
-        <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:lukedo2111@gmail.com" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
-        <p>Website designed and coded by me :D</p>
-    </footer>
+    <footer>
+        <div class="separating-line"></div>
+        <div class=" grid nav-grid-master">
+            <h4 class="footer-msg">Designed and coded by me :D with the help of city pop, cameras and anime.</h4>
+            <div class="nav-grid-text grid nav-button add-gutters">
+                <a href="mailto:lukedo2111@gmail.com" class="footer-link">Email</a>
+                <a href="https://www.linkedin.com/in/luke-do-284073216/" class="footer-link" target="_blank">LinkedIn</a>
+                <a href="https://www.instagram.com/lukex1a/" class="footer-link" target="_blank">Instagram</a>
+            </div>
+        </div>
+    </footer>  
     <script src="js/vanilla-lazyload.js"></script>
     <script src="js/scrollTrigger.js"></script>
 </body>
